<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2011 Google Inc. All Rights Reserved.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout android:id="@+id/customVarGroup"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customVarInfo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customVarVisitor" />
        <Button android:id="@+id/customVarVisitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customVarSet" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customVarSession" />
        <Button android:id="@+id/customVarSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customVarSet" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customVarPage" />
        <Button android:id="@+id/customVarPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customVarSet" />

        <TextView android:id="@+id/customVarLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customVarLabel" />
        <!-- TODO(aihawkins): Add limit -->
        <EditText android:id="@+id/customVarIndex"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:numeric="integer"
            android:singleLine="true"
            android:hint="@string/customVarIndexHint" />
        <EditText android:id="@+id/customVarName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/customVarNameHint" />
        <EditText android:id="@+id/customVarValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/customVarValueHint" />
        <!-- TODO(aihawkins): Set enum instead and/or add limit -->
        <EditText android:id="@+id/customVarScope"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:numeric="integer"
            android:singleLine="true"
            android:hint="@string/customVarScopeHint" />
        <Button android:id="@+id/customVarSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customVarSet" />
    </LinearLayout>
</ScrollView>
