<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2011 Google Inc. All Rights Reserved.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout android:id="@+id/pageviewGroup"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <Button android:id="@+id/homePageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/helpPageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/level1Pageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/level2Pageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/customPathLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customPathLabel" />
        <EditText android:id="@+id/path"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
        <Button android:id="@+id/pageviewSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pageviewSend" />

        <Button android:id="@+id/pageviewDispatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dispatch" />
    </LinearLayout>
</ScrollView>
